fix: contrast error - a11y

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -11,7 +11,7 @@ $theme-colors: (
   grey-dark: #979797,
   dark-mode: #101926,
   error: #ec634c,
-  error-hover: #e7333e,
+  error-hover: #e9444f,
   success: #a9bf16,
   success-hover: #5b7429,
 );
